--- a/public/css/ambra_3_node.css
+++ b/public/css/ambra_3_node.css
@@ -41,23 +41,8 @@ body {
   font-size: 2em;
 }
 
-/* fix bug: showing white square after last element in list... just override last-child:after */
-div#content ul li ul li:last-child:after, div#content ul li:last-child:after {
-  background: transparent;
-}
-
-/* fix positioning issue around toggle icons */
-li a {
-  padding: 2px !important;
-  top: 1.3em !important;
-}
-
-/* add vertical spacing between parent / children */
-dl, ol, ul {
-  margin-top: 20px !important;
-}
-
 .node_person {
+  font-size: 1em;
   letter-spacing: 0.2em;
   background-color: #f9f9f9;
   padding: 5px 10px !important;
